Fix stickiness and z-index of "More" toolbar

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -11,6 +11,7 @@ body {
 
 #editor, .editor {
    margin: 8px 0 8px 0; 
+   width: 300px;
    height: 300px; 
    border: solid 1px lightgray;
 }
