--- a/docs/styles/toolbar.css
+++ b/docs/styles/toolbar.css
@@ -37,7 +37,7 @@
   z-index: 4;
 }
 
-.Markup-toolbar {
+.Markup-toolbar, .Markup-toolbar-more {
   z-index: 5;
 }
 
@@ -359,7 +359,7 @@
   vertical-align: middle;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
-  top: 0;
+  top: 35px;
   max-height: 38px;
   padding: 2px 8px;
   color: blue;
